# slop-code-graph

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.traverse  Makefile  README.md  graph.py  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: FileBrowser.tsx  FlowExplorer.tsx  LoadingSpinner.tsx
llm/: __init__.py  anthropic_client.py  base.py  constants.py  llamacpp.py  openai_client.py  openrouter_client.py  provider_config.py
scripts/: check.sh
src/: graph_builder.py  parsers.py  renderer.py
src/canvas/: CONTRACT.md  __init__.py  flow_document.py  pipeline.py  prompts.py  topic_parser.py  topic_parser_test.py
src/parsers/: __init__.py  base.py  cpp.py  flow.py  go.py  java.py  javascript.py  models.py  php.py  python.py  registry.py  typescript.py
src/renderer/: __init__.py  render.py  templates.py
src/renderer/assets/: __init__.py  app.py  canvas.py  engine.py  flow.py  treemap.py
tests/: test_graph.py  test_graph_builder.py  test_parsers.py  test_renderer.py  test_traverse.py
traverse/: __init__.py  __main__.py  cache.py  config.py  graph_service.py  llm_factory.py  llm_service.py  serialize.py  server.py
